# basic-compiler

./: AST.cpp  CMakeLists.txt  Lexer.cpp  Parser.cpp  README.md  input.txt  main.cpp  run  run.sh
